RESOLVED FIXED74870
MediaController: cannot scrub while playing.
https://bugs.webkit.org/show_bug.cgi?id=74870
Summary MediaController: cannot scrub while playing.
Jer Noble
Reported 2011-12-19 09:40:31 PST
PlatformClockCA: Stop the clock before setting the current time.
Attachments
Patch (6.38 KB, patch)
2011-12-19 09:49 PST, Jer Noble
no flags
Patch (6.33 KB, patch)
2011-12-19 10:00 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-12-19 09:45:01 PST
Updated title to reflect broader bug.
Jer Noble
Comment 2 2011-12-19 09:49:56 PST
Jer Noble
Comment 3 2011-12-19 10:00:43 PST
Created attachment 119878 [details] Patch Rebased.
Jer Noble
Comment 4 2011-12-19 11:11:56 PST
Jer Noble
Comment 5 2011-12-19 11:15:58 PST
Note You need to log in before you can comment on or make changes to this bug.