MediaController: cannot scrub while playing. https://bugs.webkit.org/show_bug.cgi?id=74870 rdar://problem/10602037

Reviewed by Eric Carlson.

Source/WebCore:

Updated media/media-controller-playback.html test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setController): Change order of operations; set the controllers media
    element before passing controller to the controls.
* html/MediaController.cpp:
(MediaController::updatePlaybackState): Stop the playback clock when WAITING or ENDED.
(MediaController::beginScrubbing): Stop the playback clock.
(MediaController::endScrubbing): Restart (if necessary) the playback clock.
(MediaController::canPlay): Return true if paused.
* platform/mac/PlatformClockCA.cpp:
(PlatformClockCA::setCurrentTime): Stop the CAClock before changing the current time.

LayoutTests:

* media/media-controller-playback.html:

Canonical link: https://commits.webkit.org/91613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103249 268f45cc-cd09-0410-ab3c-d52691b4dbfc